# full-stack-fastapi-mongodb

./: .gitignore  CONTRIBUTING.md  README.md  THIRD-PARTY-NOTICES.txt  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: deno.yml
docs/: authentication-guide.md  deployment-guide.md  development-guide.md  getting-started.md  websocket-guide.md
example/: .gitignore  README.md  cookiecutter-config-file.yml  docker-compose.yml
example/backend/: celeryworker.dockerfile
example/frontend/: package.json
scripts/: dev-fsfp-back.sh  dev-fsfp.sh  discard-dev-files.sh
{{cookiecutter.project_slug}}/: .env  .gitignore  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: .gitignore  backend.dockerfile  celeryworker.dockerfile
{{cookiecutter.project_slug}}/backend/app/: README.md  pyproject.toml  worker-start.sh
{{cookiecutter.project_slug}}/backend/app/alembic/versions/: fb120f8fc198_token_remove_to_invalidate.py
{{cookiecutter.project_slug}}/backend/app/app/: backend_pre_start.py  main.py  scratchpad.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: login.py  proxy.py  users.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: base.py  crud_token.py  crud_user.py  neo_base.py
{{cookiecutter.project_slug}}/backend/app/app/db/: base_class.py  init_db.py  session.py
{{cookiecutter.project_slug}}/backend/app/app/models/: __init__.py  token.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/schemas/: __init__.py  base_schema.py  emails.py  token.py  totp.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/tests/: conftest.py
{{cookiecutter.project_slug}}/backend/app/app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
{{cookiecutter.project_slug}}/backend/app/app/tests/crud/: test_item.py  test_user.py
{{cookiecutter.project_slug}}/backend/app/app/tests/utils/: item.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/worker/: tests.py
{{cookiecutter.project_slug}}/frontend/: .env.local  .eslintrc.json  .gitignore  Dockerfile  app.vue  eslint.config.mjs  middleware.ts  next.config.js  nuxt.config.ts  package.json  postcss.config.js  tsconfig.json  (+2 more)
(+150 files in other folders)
